--- a/src/templates/components/chunks/_seo.twig
+++ b/src/templates/components/chunks/_seo.twig
@@ -6,6 +6,7 @@
     { label: "Share previews"|t, id: "previews" },
     { label: "Images"|t, id: "images" },
     { label: "Headings"|t, id: "headings" },
+    { label: "Structured data"|t, id: "structuredData" },
 ] %}
 
 {# ======================= #}
@@ -68,6 +69,8 @@
             {% include "author-toolbar/components/seoMenu/_imagesTab" %}
 
             {% include "author-toolbar/components/seoMenu/_headingsTab" %}
+
+            {% include "author-toolbar/components/seoMenu/_structuredData" %}
         </div>
     </div>
 </div>
