--- a/src/templates/components/chunks/_startMenu.twig
+++ b/src/templates/components/chunks/_startMenu.twig
@@ -4,10 +4,28 @@
 {% set startMenuOptions = [
     { icon: "dashboard", label: "Dashboard"|t, href: cpUrl('dashboard') },
     { icon: "entries", label: "Entries"|t, href: cpUrl('entries') },
+] %}
+
+{% if craft.commerce is defined %}
+    {% set newOrdersCount = craft.orders().status('new').count() %}
+
+    {% set startMenuOptions = startMenuOptions|merge([
+        { icon: "orders", label: "Orders"|t, href: cpUrl('commerce/orders'), badge: newOrdersCount }
+    ]) %}
+
+    {% if craft.products.exists %}
+        {% set startMenuOptions = startMenuOptions|merge([
+            { icon: "products", label: "Products"|t, href: cpUrl('commerce/products') },
+            { icon: "warehouse", label: "Inventory"|t, href: cpUrl('commerce/inventory') }
+        ]) %}
+    {% endif %}
+{% endif %}
+
+{% set startMenuOptions = startMenuOptions|merge([
     { icon: "assets", label: "Assets"|t, href: cpUrl('assets') },
     { icon: "profile", label: "Acount settings"|t, href: cpUrl('myaccount') },
-    { icon: "logout", label: "Logout"|t, href: cpUrl('logout') },
-] %}
+    { icon: "logout", label: "Logout"|t, href: cpUrl('logout') },    
+]) %}
 
 {# ======================= #}
 {# TEMPLATE                #}
@@ -50,6 +68,10 @@
                         {{ svg("@digitalastronaut/craftauthortoolbar/web/icons/#{option.icon}.svg") }}
 
                         <p class="cat-typo-body-md">{{ option.label }}</p>
+
+                        {% if option.badge is defined and option.badge %}
+                            <div class="cat-badge cat-typo-body-sm">{{ option.badge }} {{ "New"|t }}</div>                        
+                        {% endif %}
                     </a>
                 </li>
             {% endfor %}
