--- a/src/templates/_toolbar.twig
+++ b/src/templates/_toolbar.twig
@@ -103,13 +103,13 @@
             </div>
         </div>
 
-        <ul class="cat-toolbar-warnings-list">
+        {# <ul class="cat-toolbar-warnings-list">
             <li class="cat-toolbar-warnings-list-item">
                 {{ svg("@digitalastronaut/craftauthortoolbar/web/icons/triangle-exclamation.svg") }}
 
                 <p class="cat-typo-body-md">{{ "Je bent inhoud aan het bewerken op de testomgeving" }}</p>
             </li>
-        </ul>
+        </ul> #}
     </div>
 
     <script>
